@@ -21,7 +21,7 @@
 struct s_dico;
 struct s_strlist;
 
-int vfat_mkfs(struct s_dico *d, char *partition, char *fsoptions);
+int vfat_mkfs(struct s_dico *d, char *partition, char *fsoptions, char *mkfslabel, char *mkfsuuid);
 int vfat_getinfo(struct s_dico *d, char *devname);
 int vfat_mount(char *partition, char *mntbuf, char *fsbuf, int flags, char *mntinfo);
 int vfat_get_reqmntopt(char *partition, struct s_strlist *reqopt, struct s_strlist *badopt);
