@@ -2,6 +2,7 @@ fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
 =====================================================================
 * 0.8.0
   - Implemented FAT filesystem support for EFI system partitions
+  - Allow user to specify new filesystem label or UUID during restfs
 * 0.6.24 (2016-08-07):
   - Updated man page and description of the commands and options
   - Support for sparse inode chunks on XFS v5
